@@ -1,5 +1,11 @@
 2008-01-19  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* clutter/clutter-main.c (generate_enter_leave_events): Do not
+	take the explicit reference, and let clutter_event_copy() do it
+	for us. (#714, Neil Roberts)
+
+2008-01-19  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	* clutter/clutter-event.c (clutter_event_copy): Take an extra
 	reference on the related actor in ClutterEventCrossing that we
 	explicitly unref in clutter_event_free(). (#714, Neil Roberts)
